# gerard

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  REMOVED.md  start.sh
scripts/: generate.py  kill_gerard.sh  see_gerard.sh  start_gerard.sh  summon_setup.py
serenity_examples/e15_simple_dashboard/src/: main.rs
serenity_examples/testing/src/: main.rs
src/: main.rs
src/internal/: basic.rs  help.rs  jar.rs  locate.rs  mod.rs  replies.rs
src/replies/: basic.rs
src/summon/: generate.rs  mod.rs  pool.rs  wish.rs
src/utils/: driver.rs  lus.rs  mod.rs
