[package]
name = "gerard"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
poise = "0.6.0"
tokio = { version = "1", features = ["full"] }
image = "0.25"
walkdir = "2"

# TTS dependencies
songbird = "0.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
